# decypher

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.dist.yaml
.github/workflows/: ci.yml
examples/: indiana_jones.rs  parse_query.rs
fuzz/: Cargo.toml  dictionary.txt  seed_corpus.sh
fuzz/fuzz_targets/: fuzz_parse_ast.rs  fuzz_parse_cst.rs  fuzz_parse_hir.rs
src/: ast.rs  cypher.pest  error.rs  hir.rs  lib.rs  parser.rs  recover.rs  sema.rs  syntax.rs
src/ast/: build.rs  build_cst.rs  clause.rs  expr.rs  mod.rs  names.rs  pattern.rs  print.rs  procedure.rs  query.rs  schema.rs  visit.rs
src/ast/build_cst/: mod.rs  shared.rs
src/error/: miette_impl.rs  render.rs  translate.rs
src/hir/: arena.rs  binding.rs  diagnostic.rs  expr.rs  lower.rs  ops.rs  pattern.rs
src/parser/: lexer.rs  mod.rs
src/parser/grammar/: expr.rs
src/sema/: aggregation.rs  error.rs  mod.rs  resolve.rs  scope.rs
src/syntax/: mod.rs
src/syntax/ast/: clauses.rs  expressions.rs  mod.rs  patterns.rs  projection.rs  schema.rs  support.rs  tokens.rs  top_level.rs  traits.rs
tests/: ast_shape.rs  build_cst_parity.rs  cst_ast.rs  cst_smoke.rs  errors.rs  hir_lower.rs  parse_generic.rs  property.rs  roundtrip.rs  sema_redeclare.rs  sema_scope.rs  sema_with_scope.rs  smoke.rs  suite-1.cypher  suite-2.cypher  suite-3.cypher  suite-4.cypher  suite-5.cypher  suite_tests.rs
