[package]
name = "open-cypher"
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.95"
authors = ["Austin Poor <code@austinpoor.com"]
description = "A rust library for parsing openCypher queries."
documentation = "https://docs.rs/open-cypher"
readme = "README.md"
homepage = "https://github.com/a-poor/open-cypher"
repository = "https://github.com/a-poor/open-cypher"
license = "MIT OR Apache-2.0"
keywords = ["sql", "cypher", "graph", "parser"]
categories = ["parser-implementations"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
thiserror = "1"
serde = { version = "1", optional = true, features = ["derive"] }
ryu = "1"
miette = { version = "7", optional = true }

[features]
default = []
low-level = []
serde = ["dep:serde"]
miette = ["dep:miette"]
