[package]
name = "cypher"
version = "0.2.0-alpha.1"
edition = "2024"
rust-version = "1.94"
authors = ["Markus Mayer <widemeadows@gmail.com>", "Austin Poor <code@austinpoor.com>"]
description = "A rust library for parsing openCypher queries."
documentation = "https://docs.rs/open-cypher"
readme = "README.md"
homepage = "https://github.com/sunsided/cypher"
repository = "https://github.com/sunsided/cypher"
license = "EUPL-1.2 OR MIT OR Apache-2.0"
keywords = ["sql", "cypher", "graph", "parser", "opencypher"]
categories = ["parser-implementations"]

[dependencies]
thiserror = "1"
serde = { version = "1", optional = true, features = ["derive"] }
ryu = "1"
miette = { version = "7", optional = true }
rowan = "0.15"
unicode-ident = "1"

[features]
default = []
serde = ["dep:serde"]
miette = ["dep:miette"]

[dev-dependencies]
assert2 = "0.3"
proptest = "1"
