[package]
name = "cypher-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cypher]
path = ".."

[features]
serde = ["cypher/serde"]
miette = ["cypher/miette"]

[[bin]]
name = "fuzz_parse_cst"
path = "fuzz_targets/fuzz_parse_cst.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_ast"
path = "fuzz_targets/fuzz_parse_ast.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parse_hir"
path = "fuzz_targets/fuzz_parse_hir.rs"
test = false
doc = false
bench = false
